# Readme

./: DOCUMENTATION_INDEX.md  README.md  README_ver2.md  Special_Features_Explanation.md
file_md/: API_Documentation.md  Deployment_Guide.md  How-to-use.md  report.md
uitm-devops-challenge_VECNA-main/: .gitignore  02-DeploymentGuide.md  ARCHITECTURE_DIAGRAM.md  HOW-TO-USE.md  README.md  SECURITY_DEMO_VALIDATION.md  SECURITY_DEMO_VALIDATION_UPDATED.md  package-lock.json
uitm-devops-challenge_VECNA-main/APK DOWNLOAD HERE/: VecnaRentverse.apk
uitm-devops-challenge_VECNA-main/rentverse-ai-service/: Dockerfile
uitm-devops-challenge_VECNA-main/rentverse-backend/: .env.example  .env.test  .eslintrc.json  .prettierignore  CORS_SETUP.md  OTP_EMAIL_INTEGRATION.md  README.md  add-missing-property.js  debug-complete-flow.js  debug-images-complete.js  debug-images.js  enable-admin-mfa.js  fix-all-property-leases.js  fix-property-leases.js  fix_property_deletion.sql  index.js  package-lock.json  package.json  promote-to-admin.js  test-security-anomalies.js
uitm-devops-challenge_VECNA-main/rentverse-datasets/: .gitignore  README.md  pyproject.toml  rentals.csv  rentals_raw.csv  scrapy.cfg  seed_data.py
uitm-devops-challenge_VECNA-main/rentverse-datasets/fazwaz_propertyrent/: items.py  middlewares.py  params.py  pipelines.py  settings.py
uitm-devops-challenge_VECNA-main/rentverse-datasets/fazwaz_propertyrent/spiders/: fazwazrent.py
uitm-devops-challenge_VECNA-main/rentverse-frontend/: .gitignore  API_MIGRATION.md  CROSS_BROWSER_DEPLOYMENT_GUIDE.md  FEATURES.md  README.md  (+21 more)
(+270 files in other folders)
